B2C custom issues resolved